--- a/style.css
+++ b/style.css
@@ -114,11 +114,7 @@ input{
     font-size: 18px;
     color: #d79922;
 }
-.body-one{
-    min-height: 100vh;
-    width: 100%;
-    background-color: #efe1ba;
-}
+
 button{
     background: transparent;
     border: 0;
@@ -150,3 +146,140 @@ button .fa-solid{
 .result-box ul li:hover{
     background: #3366cc;
 }
+
+.text-box-one{
+    text-align: center;
+}
+
+.text-box-one #four{
+	margin-left: 100px;
+	font-size: 40px;
+    font-family: Maragsa;
+    color: #d79922;
+}
+
+.text-box-one #five{
+	text-align: justify;
+	font-size: 40px;
+    font-family: Quiapo_Free;
+    color: ##201B15;
+	text-align: center;
+}
+.body-one{
+    min-height: 100vh;
+    width: 100%;
+    background-color: #efe1ba;
+	padding-bottom: 50px;
+}
+
+.main-body{
+	text-align: center;
+	height: auto;
+	width: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.main-content{
+	width: 1500px;
+    height: auto;
+}
+
+.body-two{
+    min-height: 100vh;
+    width: 100%;
+    background-color: #d79922;
+}
+
+.sub-body{
+	text-align: center;
+	height: auto;
+	width: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.users-icon{
+	margin-top: 100px;
+	width: 175px;
+    height: 175px;
+	display: block;
+}
+
+.text-box-two{
+    margin-top: 75px;
+    text-align: center;
+}
+
+.text-box-two #six{
+    font-size: 125px;
+    font-family: Quiapo;
+    color: #black;
+	text-align: center;
+	height: auto;
+	width: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.text-box-two #seven{
+	font-size: 40px;
+    font-family: Maragsa;
+	color: #201B15;	
+}
+
+.text-box-two #eight{
+	font-size: 40px;
+    font-family: Maragsa;
+    color: #efe1ba;
+}
+
+.text-box-two #nine{
+	font-size: 40px;
+    font-family: Maragsa;
+	color: #201B15;	
+}
+
+.body-three{
+	min-height: 20vh;
+    width: 100%;
+    background-color: #201B15;
+	padding-bottom: 20px;
+}
+
+.footer-container{
+      display: flex;
+	  justify-content: space-between;
+	  align-items: center;
+}
+
+ .footer-logo{
+	width: 350px;
+	height: auto;
+	margin-top: 5vh;
+	margin-left: 2vh;
+ }
+
+.pinkshark-logo{
+	width: 150px;
+	height: 100px;
+	margin-top: 5vh;
+}
+	
+.language-selector{
+	width: 350px;
+	height: 100px;
+	margin-top: 5vh;
+}
+
+.copy-right{
+	font-size: 20px;
+	color: #FFFFFF;	
+	text-align: center;
+}
+
+
+	  
+	  
